<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="cc.testme.countcoins.MainActivity"
        android:weightSum="1">

    <TextView
            style="@style/textView"
            android:id="@+id/description"
            android:text="@string/description"
            android:textSize="20sp"
            android:textAlignment="center"/>

    <TextView
            style="@style/textView"
            android:id="@+id/price"
            android:text="@string/price"
            android:textSize="28sp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1">
        </Space>

        <Button
                style="@style/coinButton"
                android:text="@string/coin5"
                android:textColor="#A30E1E"
                android:background="@drawable/button_coin"
                android:id="@+id/cents5"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1">
        </Space>

        <Button
                style="@style/coinButton"
                android:text="@string/coin10"
                android:textColor="#A30E1E"
                android:background="@drawable/button_coin"
                android:id="@+id/cents10"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1">
        </Space>

        <Button
                style="@style/coinButton"
                android:text="@string/coin25"
                android:textColor="#A30E1E"
                android:background="@drawable/button_coin"
                android:id="@+id/cents25"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1">
        </Space>

        <Button
                style="@style/coinButton"
                android:text="@string/coin100"
                android:textColor="#000000"
                android:background="@drawable/button_dollar"
                android:id="@+id/cents100"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1">
        </Space>

    </LinearLayout>

    <Button
            android:id="@+id/button_done"
            style="@style/button"
            android:text="@string/button_done"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"/>


    <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="auto_fit"
            android:gravity="center"
            android:columnWidth="70dp"
            android:layout_marginTop="15dp"
            android:stretchMode="columnWidth"
            android:id="@+id/grid"
            />

</LinearLayout>
